--- a/ch02/archaius/01/build.gradle
+++ b/ch02/archaius/01/build.gradle
@@ -9,5 +9,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile group: 'com.netflix.archaius', name: 'archaius-core', version: '0.6.6'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+    testCompile group: 'com.netflix.archaius', name: 'archaius-core', version: '0.6.6'
 }
